syntax = "proto3";
package autonomous_driving;

import "perception_object.proto";  // 导入第三层消息

// 传感器数据集合
message SensorData {
  enum SensorType {
    LIDAR = 0;
    RADAR = 1;
    CAMERA = 2;
    ULTRASONIC = 3;
  }
  
  SensorType type = 1;               // 传感器类型
  double horizontal_fov = 2;        // 水平视场角(度)
  double vertical_fov = 3;          // 垂直视场角(度)
  double max_range = 4;             // 最大探测距离(米)
  
  // 感知数据
  repeated PerceptionObject objects = 5;  // 检测到的物体列表
  bytes raw_data = 6;                   // 原始数据(可选)
  double confidence = 7;                // 数据置信度(0-1)
  bool is_calibrated = 8;              // 是否已校准
}
